fix(herow-dev): correct factual errors in java agents found by adversarial review